WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53709
Text emphasis marks have wrong orientation for vertical text
https://bugs.webkit.org/show_bug.cgi?id=53709
Summary
Text emphasis marks have wrong orientation for vertical text
mitz
Reported
2011-02-03 13:06:48 PST
Text emphasis marks have wrong orientation for vertical text
Attachments
Give the emphasis mark font the correct orientation
(116.01 KB, patch)
2011-02-03 13:12 PST
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-02-03 13:07:39 PST
<
rdar://problem/8948788
>
mitz
Comment 2
2011-02-03 13:12:29 PST
Created
attachment 81105
[details]
Give the emphasis mark font the correct orientation
mitz
Comment 3
2011-02-03 13:20:59 PST
Fixed in
r77530
. <
http://trac.webkit.org/changeset/77530
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug