<rdar://problem/8948788> Text emphasis marks have wrong orientation for vertical text https://bugs.webkit.org/show_bug.cgi?id=53709

Reviewed by Anders Carlsson.

Source/WebCore:

Covered by rendering of fast/text/emphasis-vertical.html

* platform/graphics/mac/SimpleFontDataMac.mm:
(WebCore::SimpleFontData::scaledFontData): Give the scaled font the same orientation this font
has.

LayoutTests:

* platform/mac/fast/text/emphasis-vertical-expected.checksum:
* platform/mac/fast/text/emphasis-vertical-expected.png:



Canonical link: https://commits.webkit.org/67612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77530 268f45cc-cd09-0410-ab3c-d52691b4dbfc